--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-    <h1 style="text-align: center;">Yulu Financial Management Review Assistant</h1>
+    <h1 style="text-align: center;">Yulu Financial Management Review Assistant BETA V0.1</h1>
     <h2 style="text-align: center;">This Chatbot is dedicated to reviewing Temple University's Financial Management (Fin 3101)</h2>   
     <h2 style="text-align: center;">Where shall we start today? Select a chapter below</h2>  
     
