--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="option" href="#">Chapter 5</a>
         <a class="option" href="#">Chapter 6</a>
         <a class="option" href="#">Chapter 7</a>
-        <a class="option" href="Chapter8-1.html">Chapter 8</a>
+        <a class="option" href="Chapter8-1">Chapter 8</a>
         <a class="option" href="#">Chapter 9</a>
         <a class="option" href="#">Chapter 10</a>
         <a class="option" href="#">Chapter 11</a>
