--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a class="option" href="Chapter4-1.html">Chapter 4</a> <!-- 指向本地文件 -->
         <a class="option" href="#">Chapter 5</a>
         <a class="option" href="#">Chapter 6</a>
-        <a class="option" href="#">Chapter 7</a>
+        <a class="option" href="Chapter7-1.html">Chapter 7</a>
         <a class="option" href="Chapter8-1.html">Chapter 8</a>
         <a class="option" href="#">Chapter 9</a>
         <a class="option" href="#">Chapter 10</a>
