--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
     
     <div class="options-container">
         <a class="option" href="#">Chapter 2</a>
-        <a class="option" href="#">Chapter 3</a>
-        <a class="option" href="Chapter4-1.html">Chapter 4</a> <!-- 指向本地文件 -->
-        <a class="option" href="#">Chapter 5</a>
-        <a class="option" href="#">Chapter 6</a>
+        <a class="option" href="#">Chapter 3-Incomplete</a>
+        <a class="option" href="Chapter4-1.html">Chapter 4-Incomplete</a> <!-- 指向本地文件 -->
+        <a class="option" href="#">Chapter 5-Incomplete</a>
+        <a class="option" href="#">Chapter 6-Incomplete</a>
         <a class="option" href="Chapter7-1.html">Chapter 7</a>
         <a class="option" href="Chapter8-1.html">Chapter 8</a>
-        <a class="option" href="#">Chapter 9</a>
-        <a class="option" href="#">Chapter 10</a>
-        <a class="option" href="#">Chapter 11</a>
+        <a class="option" href="#">Chapter 9-Incomplete</a>
+        <a class="option" href="#">Chapter 10-Incomplete</a>
+        <a class="option" href="#">Chapter 11-Incomplete</a>
         <a class="option" href="#">Chapter 14</a>
-        <a class="option" href="#">Chapter 16</a>
-        <a class="option" href="#">Problem Solving Infancy Robot</a>
+        <a class="option" href="#">Chapter 16-Incomplete</a>
+        <a class="option" href="#">Problem Solving Infancy Robot-API TEST Incomplete</a>
         <a class="option" href="https://community.mis.temple.edu/yyang/" target="_blank">About the Author</a> <!-- New option added -->
     </div>
 
