--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a class="option" href="#">Chapter 14</a>
         <a class="option" href="#">Chapter 16-Incomplete</a>
         <a class="option" href="#">Problem Solving Infancy Robot-API TEST Incomplete</a>
-        <a class="option" href="" target="_blank">Practice_before_the_Fin3101_Exam2</a> <!-- New option added -->
+        <a class="option" href="Fin3101_Practice_before_the_Exam2.html" target="_blank">Practice_before_the_Fin3101_Exam2</a> <!-- New option added -->
         <a class="option" href="https://community.mis.temple.edu/yyang/" target="_blank">About the Author</a> <!-- New option added -->
         
     </div>
