--- a/Fin3101_Practice_before_the_Exam2.html
+++ b/Fin3101_Practice_before_the_Exam2.html
@@ -4,6 +4,7 @@
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fin3101_Practice_before_the_Exam2</title>
     <h1> Fin3101_Practice_before_the_Exam2 </h1>
+    <h2>Good luck!</h2>
     <style>
         /* 通用页面布局 */
         body {
