--- a/Fin3101_Practice_before_the_Exam2.html
+++ b/Fin3101_Practice_before_the_Exam2.html
@@ -335,7 +335,7 @@
     </script>
 </head>
 <body>
-    <header>Online Exam System</header>
+    <header>Fin3101_Practice_before_the_Exam2</header>
 
     <!-- 固定在右下角的计时器 -->
     <div id="timer">Click the "Start Exam" button to begin the timer</div>
