--- a/Fin3101_Practice_before_the_Exam2.html
+++ b/Fin3101_Practice_before_the_Exam2.html
@@ -346,7 +346,7 @@
 
         <!-- 昵称输入容器 -->
         <div id="nameContainer">
-            <label for="nameInput">Please enter your name:</label>
+            <label for="nameInput">Please enter your name (optional):</label>
             <input type="text" id="nameInput" placeholder="Enter your name">
             <button class="btn" id="startButton" onclick="startExam()">Start Exam</button>
         </div>
