--- a/Fin3101_Practice_before_the_Exam2.html
+++ b/Fin3101_Practice_before_the_Exam2.html
@@ -5,6 +5,7 @@
     <title>Fin3101_Practice_before_the_Exam2</title>
     <h1> Fin3101_Practice_before_the_Exam2 </h1>
     <h2>Good luck!</h2>
+    <p>***Some of the questions in this test are selected or adapted from Howard Keen's Exam type exercises.***</p>
     <style>
         /* 通用页面布局 */
         body {
